CSS/PortFolio_CSS.css
/* ... */
.Column_2 {
	float: left;
	width: 50%;
	padding: 10px;
	padding-top: 1.9%;
	height: 425px;
	background-color: #010055;
}

.Column_3 {
	float: left;  
	width: 50%; /* This ensures one column takes up half the page width */
	padding: 10px; 
	padding-top: 1%; /* This ensures there is space between the top of the column and our headings */
	height: 425px; /* This sets the height of our column at 425 pixels - if you change the text within the columns, you will need to adjust the column heights accordingly */
	background-color: #d0e7ff;
}

.Row:after { /* This inserts something after the content of selected elements */
	content: ""; /* By leaving this blank, we are allowing the footer (covered lower down) to be displayed - removing it makes the footer overwrite a column */
	display: table; /* The display property specifies the type of display behavior; the table value tells the browser to treat the element as a table */
	clear: both; /* This clears any other elements from floating on the left or the right of an element */
}

#Form {
	height: 425px;
}

/* Heading 1 elements */
h1 {
	text-transform: uppercase; /* We are capitalizing our headings */
	font-family: "Trebuchet MS", Optima; 
	text-align: center;
	margin-top: 3%; /* We are adding a small margin above the headings */
	color: #0b0a29;
}

h2 {
    display: block;
    font-size: 1.5em;
    margin-block-start: 0.83em;
    margin-block-end: 0.83em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
	font-weight: bold;
}

h3 {
	text-transform: uppercase; /* We are capitalizing our headings */
	font-family: "Trebuchet MS", Optima; 
	text-align: center;
	color: #0b0a29;
}

.Line {
	line-height: 1.0;
	width: 100%;
	float:left;
	padding: 9px;

}

/* Paragraph elements */
p {
	font-family: Perpetua, Rockwell Extra Bold;
	text-align: justify;
	letter-spacing: 1px; /* This expands the text slightly */
	font-size: 25px;
	padding-left: 20px;
	padding-right: 20px;
}

/* Center align elements - this embraces all centered text */
center {
	font-family: Perpetua, Rockwell Extra Bold;
	text-align: center;
	letter-spacing: 1px;
	font-size: 20px;
	padding-left: 20px;
	padding-right: 20px;
}

/* Anchor elements */
a {
	color: blue; /* We are ensuring all links are blue */
}

/* Quotation elements */
q {
	font-style: italic;
	font-weight: bold;
}

/* Image elements */
img {
	
    border-radius: 8px; /* This causes our images to have slightly rounded edges */
    max-width: 100%; 
    height: 340px; 
	margin-left: auto; /* This in combination with margin-right: auto centers our images */
    margin-right: auto;
	display: block;	/* By specifying block display we can ensure our images are able to be centered */
}

/* Contact form */
input[type=text] { /* This covers the input sections of the contact form */
	width: 100%;
	padding: 10px;
    border: 1px solid #ccc; /* We are setting a solid border and its colors */
    border-radius: 4px; 
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 10px;
    resize: vertical; /* This specifies how an element is resized; vertical allows the user to resize the height of the element */
    font-family: Perpetua, Rockwell Extra Bold; 
}

/* Submit button */
input[type=submit] { /* This covers the submit button for the contact form */
	background-color: black;
	color: white;
	font-weight: bold;
	padding: 10px 15px;
	border: none;
	border-radius: 4px;
	cursor: pointer;
	display: block;
	margin-left: auto;
	margin-right: auto; 
	font-family: Perpetua, Rockwell Extra Bold;
}

/* Hover effect for submit button */
input[type=submit]:hover {
	background-color: white; /* Makes the background turn white when hovered over */
	color: black; /* Makes the font turn black when hovered over */
	font-weight: bold; /* Makes the font bold when hovered over */
	transform: scale(1.5); /* Makes the button increase 1.5 times in size */ 
	transition: transform 1.5s; /* Makes the transform effect last 1.5 seconds from start to finish */
}

/* Form elememt */
form { 
	border-radius: 5px; 
	background-color: #f2f2f2;
	padding: 20px;
	font-family: "Trebuchet MS", Optima;
}

/* Center align element hover effect */
center:hover {
	transition: transform 2s;
	transform: scale(1.1);
}

/* Paragraph element hover effect */
p:hover {
	color: #00004d;	
    transition: transform 1s;
	transform: scale(1.01);
}

/* Heading 1 element hover effect */
h1:hover {
	color: rgb(5, 0, 77);
	font-weight: normal; /* Makes the text no longer bold when hovered over */ 
}

/* Image element hover effects */
img:hover {
	filter: grayscale(5%);  /* Brings back most of the image's color when hovered over */
    transition: transform 1s;
	transform: scale(1.1);
}

/* Button used to open the contact form - fixed at the bottom of the page */
.Pop_Up_Button {
	bottom: 1.75vw;
	right: 1.75vw;
	width: 25vw;  
	background-color: white;
	color: black;
	border: solid;
	cursor: pointer;
	position: fixed;
	-webkit-animation: movePopup 5s;
	animation: movePopup 5s;
  }
  
/* The popup form - hidden by default */
.form-popup {
	border: 3px solid #f0f1f0;
	z-index: 8;
	display: none;
	position: fixed;
	bottom: 6px;
	right: 6px;
}
  
/* Form styling */
.form-container {
	max-width: 49vw;
	padding: 9px;
	background-color: white;
}
  
/* Input fields */
.form-container input[type=text], .form-container input[type=password] {
	width: 100%;
	padding: .93vw;
	margin: .6vw 0 .6vw 0;
	border: none;
	background: Gainsboro;
	font-family: Helvetica, Avant Garde;
	font-size: 1vw; 
}
  
/* Submit button */
.form-container .btn {
	background-color: white;
	color: black;
	border-color: black;
	margin-bottom:1vh;
}
  
/* Close button */
.form-container .cancel {
	background-color: black;
	color: white;
	border-color: gray;
}
  
/* Button styling */
button {
	font-family: "Trebuchet MS", Optima; 
	letter-spacing: .3vw; 
	font-size: 1.5vw;
	font-weight: bold;
	padding: 1.5vw 1.5vw;
	border-style: solid;
	cursor: pointer;
	width: 100%;
	height: auto;
}
/* ... */

